crates/bijux-dna-planner-fastq/tests/snapshots/bijux-dna-planner-fastq__contracts__fastq_default_pipeline_plan.snap
---
source: crates/bijux-dna-planner-fastq/tests/contracts/plan/plan_snapshots.rs
expression: "bijux_dna_testkit::snapshot_normalize_json(&json)"
---
{
  "contract_version": {
    "major": 1,
    "minor": 0
  },
  "deterministic_scheduler": true,
  "edges": [
    {
      "from": "fastq.detect_adapters",
      "to": "fastq.trim_reads"
    },
    {
      "from": "fastq.filter_reads",
      "to": "fastq.profile_reads"
    },
    {
      "from": "fastq.profile_reads",
      "to": "fastq.report_qc"
    },
    {
      "from": "fastq.trim_reads",
      "to": "fastq.filter_reads"
    },
    {
      "from": "fastq.validate_reads",
      "to": "fastq.detect_adapters"
    }
  ],
  "pipeline_id": "fastq-to-fastq__default__v1",
  "planner_version": "bijux-dna-planner-fastq.v1",
  "policy": "PreferAccuracy",
  "retry_policy": {
    "max_attempts": 1,
    "retry_on_exit_codes": []
  },
  "schema_version": "bijux.execution_graph.v1",
  "step_timeout_s": null,
  "steps": [
    {
      "aux_images": {},
      "command": {
        "template": [
          "echo"
        ]
      },
      "expected_artifact_ids": [],
      "image": {
        "digest": "sha256:plan",
        "image": "bijux/test"
      },
      "io": {
        "inputs": [
          {
            "name": "reads_r1",
            "optional": false,
            "path": "reads_R1.fastq.gz",
            "role": "reads"
          }
        ],
        "outputs": [
          {
            "name": "adapter_report",
            "optional": false,
            "path": "out/detect_adapters/fastqc/adapter_report.json",
            "role": "report_json"
          }
        ]
      },
      "metrics_schema_ids": [],
      "out_dir": "out/detect_adapters/fastqc",
      "resources": {
        "mem_gb": 1,
        "runtime": "docker",
        "threads": 1,
        "tmp_gb": 1
      },
      "stage_id": "fastq.detect_adapters",
      "step_id": "fastq.detect_adapters"
    },
    {
      "aux_images": {},
      "command": {
        "template": [
          "echo"
        ]
      },
      "expected_artifact_ids": [],
      "image": {
        "digest": "sha256:plan",
        "image": "bijux/test"
      },
      "io": {
        "inputs": [
          {
            "name": "reads_r1",
            "optional": false,
            "path": "out/trim_reads/fastp/fastp.fastq.gz",
            "role": "reads"
          }
        ],
        "outputs": [
          {
            "name": "filtered_reads",
            "optional": false,
            "path": "out/filter_reads/fastp/fastp.fastq.gz",
            "role": "reads"
          }
        ]
      },
      "metrics_schema_ids": [],
      "out_dir": "out/filter_reads/fastp",
      "resources": {
        "mem_gb": 1,
        "runtime": "docker",
        "threads": 1,
        "tmp_gb": 1
      },
      "stage_id": "fastq.filter_reads",
      "step_id": "fastq.filter_reads"
    },
    {
      "aux_images": {},
      "command": {
        "template": [
          "echo"
        ]
      },
      "expected_artifact_ids": [],
      "image": {
        "digest": "sha256:plan",
        "image": "bijux/test"
      },
      "io": {
        "inputs": [
          {
            "name": "reads_r1",
            "optional": false,
            "path": "out/filter_reads/fastp/fastp.fastq.gz",
            "role": "reads"
          }
        ],
        "outputs": [
          {
            "name": "qc_json",
            "optional": false,
            "path": "out/profile_reads/seqkit_stats/qc.json",
            "role": "metrics_json"
          },
          {
            "name": "qc_tsv",
            "optional": false,
            "path": "out/profile_reads/seqkit_stats/qc.tsv",
            "role": "summary_tsv"
          },
          {
            "name": "qc_plots_dir",
            "optional": true,
            "path": "out/profile_reads/seqkit_stats/plots",
            "role": "index"
          }
        ]
      },
      "metrics_schema_ids": [],
      "out_dir": "out/profile_reads/seqkit_stats",
      "resources": {
        "mem_gb": 1,
        "runtime": "docker",
        "threads": 1,
        "tmp_gb": 1
      },
      "stage_id": "fastq.profile_reads",
      "step_id": "fastq.profile_reads"
    },
    {
      "aux_images": {},
      "command": {
        "template": [
          "echo"
        ]
      },
      "expected_artifact_ids": [],
      "image": {
        "digest": "sha256:plan",
        "image": "bijux/test"
      },
      "io": {
        "inputs": [
          {
            "name": "reads_r1",
            "optional": false,
            "path": "out/filter_reads/fastp/fastp.fastq.gz",
            "role": "reads"
          }
        ],
        "outputs": [
          {
            "name": "multiqc_report",
            "optional": true,
            "path": "out/report_qc/multiqc/multiqc_report.html",
            "role": "report_html"
          },
          {
            "name": "multiqc_data",
            "optional": true,
            "path": "out/report_qc/multiqc/multiqc_data",
            "role": "index"
          }
        ]
      },
      "metrics_schema_ids": [],
      "out_dir": "out/report_qc/multiqc",
      "resources": {
        "mem_gb": 1,
        "runtime": "docker",
        "threads": 1,
        "tmp_gb": 1
      },
      "stage_id": "fastq.report_qc",
      "step_id": "fastq.report_qc"
    },
    {
      "aux_images": {},
      "command": {
        "template": [
          "echo"
        ]
      },
      "expected_artifact_ids": [],
      "image": {
        "digest": "sha256:plan",
        "image": "bijux/test"
      },
      "io": {
        "inputs": [
          {
            "name": "reads_r1",
            "optional": false,
            "path": "reads_R1.fastq.gz",
            "role": "reads"
          }
        ],
        "outputs": [
          {
            "name": "trimmed_reads",
            "optional": false,
            "path": "out/trim_reads/fastp/fastp.fastq.gz",
            "role": "trimmed_reads"
          },
          {
            "name": "trim_report",
            "optional": false,
            "path": "out/trim_reads/fastp/trim.report.json",
            "role": "report_json"
          },
          {
            "name": "stage_metrics",
            "optional": false,
            "path": "out/trim_reads/fastp/stage.metrics.json",
            "role": "metrics_json"
          }
        ]
      },
      "metrics_schema_ids": [],
      "out_dir": "out/trim_reads/fastp",
      "resources": {
        "mem_gb": 1,
        "runtime": "docker",
        "threads": 1,
        "tmp_gb": 1
      },
      "stage_id": "fastq.trim_reads",
      "step_id": "fastq.trim_reads"
    },
    {
      "aux_images": {},
      "command": {
        "template": [
          "echo"
        ]
      },
      "expected_artifact_ids": [],
      "image": {
        "digest": "sha256:plan",
        "image": "bijux/test"
      },
      "io": {
        "inputs": [
          {
            "name": "reads_r1",
            "optional": false,
            "path": "reads_R1.fastq.gz",
            "role": "reads"
          }
        ],
        "outputs": [
          {
            "name": "validation_report",
            "optional": false,
            "path": "out/validate_reads/fastqvalidator/validation.json",
            "role": "report_json"
          }
        ]
      },
      "metrics_schema_ids": [],
      "out_dir": "out/validate_reads/fastqvalidator",
      "resources": {
        "mem_gb": 1,
        "runtime": "docker",
        "threads": 1,
        "tmp_gb": 1
      },
      "stage_id": "fastq.validate_reads",
      "step_id": "fastq.validate_reads"
    }
  ]
}
