crates/bijux-dna-planner-fastq/tests/snapshots/bijux-dna-planner-fastq__contracts__fastq_plan_snapshot.snap
---
source: crates/bijux-dna-planner-fastq/tests/contracts/plan/plan_snapshots.rs
expression: "bijux_dna_testkit::snapshot_normalize_json(&json)"
---
{
  "contract_version": {
    "major": 1,
    "minor": 0
  },
  "deterministic_scheduler": true,
  "edges": [
    {
      "from": "fastq.validate_reads",
      "to": "fastq.trim_reads"
    }
  ],
  "pipeline_id": "fastq-to-fastq__default__v1",
  "planner_version": "bijux-dna-planner-fastq.v1",
  "policy": "PreferAccuracy",
  "retry_policy": {
    "max_attempts": 1,
    "retry_on_exit_codes": []
  },
  "schema_version": "bijux.execution_graph.v1",
  "step_timeout_s": null,
  "steps": [
    {
      "aux_images": {},
      "command": {
        "template": [
          "fastp",
          "--in1",
          "reads_R1.fastq.gz",
          "--out1",
          "out/trim_reads/fastp/fastp.fastq.gz",
          "--json",
          "out/trim_reads/fastp/trim_report.json",
          "--thread",
          "2"
        ]
      },
      "expected_artifact_ids": [],
      "image": {
        "digest": "sha256:fastp",
        "image": "bijux/fastp"
      },
      "io": {
        "inputs": [
          {
            "name": "reads_r1",
            "optional": false,
            "path": "reads_R1.fastq.gz",
            "role": "reads"
          }
        ],
        "outputs": [
          {
            "name": "trimmed_reads_r1",
            "optional": false,
            "path": "out/trim_reads/fastp/fastp.fastq.gz",
            "role": "trimmed_reads"
          },
          {
            "name": "report_json",
            "optional": false,
            "path": "out/trim_reads/fastp/trim_report.json",
            "role": "report_json"
          }
        ]
      },
      "metrics_schema_ids": [],
      "out_dir": "out/trim_reads/fastp",
      "resources": {
        "mem_gb": 2,
        "runtime": "short",
        "threads": 2,
        "tmp_gb": 1
      },
      "stage_id": "fastq.trim_reads",
      "step_id": "fastq.trim_reads"
    },
    {
      "aux_images": {},
      "command": {
        "template": [
          "fastqvalidator"
        ]
      },
      "expected_artifact_ids": [],
      "image": {
        "digest": "sha256:fastqvalidator",
        "image": "bijux/fastqvalidator"
      },
      "io": {
        "inputs": [
          {
            "name": "reads_r1",
            "optional": false,
            "path": "reads_R1.fastq.gz",
            "role": "reads"
          }
        ],
        "outputs": [
          {
            "name": "validation_report",
            "optional": false,
            "path": "out/validate_reads/fastqvalidator/validation.json",
            "role": "report_json"
          }
        ]
      },
      "metrics_schema_ids": [],
      "out_dir": "out/validate_reads/fastqvalidator",
      "resources": {
        "mem_gb": 1,
        "runtime": "short",
        "threads": 1,
        "tmp_gb": 1
      },
      "stage_id": "fastq.validate_reads",
      "step_id": "fastq.validate_reads"
    }
  ]
}
